@@ -1,5 +1,9 @@
 2004-01-02  Sam Steingold  <sds@gnu.org>
 
+	* makemake.in (cygwin-src) [cygwin]: cygwin source package
+
+2004-01-02  Sam Steingold  <sds@gnu.org>
+
 	fixed bug #[ 869187 ]: change-class problems
 	* record.d (%CHANGE-CLASS): un-realloc instance & new-class
 
